[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulldown"
version = "0.2.0"
description = "Fetch web pages as clean Markdown for LLM agents. HTTP-first, optional Chromium rendering, CLI + Python + MCP."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Anthony Maio", email = "anthony.maio@gmail.com" },
]
keywords = ["llm", "agent", "markdown", "web", "fetch", "mcp", "scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27,<1.0",
    "trafilatura>=1.8",
    "html-to-markdown>=1.0",
    "readability-lxml>=0.8",
    "lxml>=5.0",
    "click>=8.1",
]

[project.optional-dependencies]
render = ["playwright>=1.40"]
mcp = ["mcp[cli]>=1.0"]
all = ["pulldown[render,mcp]"]
dev = [
    "pulldown[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/anthonymaio/pulldown"
Repository = "https://github.com/anthonymaio/pulldown"
Issues = "https://github.com/anthonymaio/pulldown/issues"
Changelog = "https://github.com/anthonymaio/pulldown/blob/main/CHANGELOG.md"

[project.scripts]
pulldown = "pulldown.cli:main"

[project.entry-points."mcp.servers"]
pulldown = "pulldown.mcp_server:mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/pulldown"]

[tool.hatch.build.targets.wheel.force-include]
"src/pulldown/py.typed" = "pulldown/py.typed"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

